changes img path again #2

--- a/index.html
+++ b/index.html
@@ -23,12 +23,11 @@
             </div>
         </nav>
         
-        
 
         <div class="container-fluid">
             <h2>About Me</h2>
             <section class="about-section">
-                <img src="img\headshot.png" class="me">
+                <img src="img/headshot.png" class="me">
                 <p>
                     Hello! I'm an undergraduate student studying computer science at the University of Toronto. 
                     Currently, I am working on some front-end projects such as this one,
@@ -41,7 +40,7 @@
             <section class="project-section">
                 <article>
                     <a href = "https://github.com/czhang0312/TicTacToe">
-                        <img src="img\website.png" id="website">
+                        <img src="img/website.png" id="website">
                     </a>
                     <div>
                         <h3>Personal Website</h3>
@@ -53,7 +52,7 @@
 
                 <article>
                     <a href = "https://github.com/czhang0312/TicTacToe">
-                        <img src="img\tictactoe.png" id="tictactoe">
+                        <img src="img/tictactoe.png" id="tictactoe">
                     </a>
                     <div>
                         <h3>Tic Tac Toe</h3>
